	* gm2/gm2-libs/configure.in:  updated version number to 0.78.
	* gm2/gm2-libs-iso/COROUTINES.mod:  corrected bug.
	* gm2/gm2-libs-iso/M2EXCEPTION.mod:  updated dates.
	* gm2/www/index.ms:  updated homepage in light of the
	  completed ISO dialect.
	* gm2/gm2-libs-iso/pth.def:  (New file).
	* gm2/gm2-libs-iso/Processes.mod:  (New file).
	  (Intermediate checkin).

2010-03-27       Gaius Mulley <gaius@gnu.org>

	* gm2/examples/swig/tiny/Makefile:  (Removed file).
	* gm2/examples/swig/tiny/Makefile.in:  (New file).
	* gm2/examples/swig/exceptions/Makefile:  (Removed file).
	* gm2/examples/swig/exceptions/Makefile.in:  (New file).
	* gm2/examples/swig/strlib/Makefile:  (Removed file).
	* gm2/examples/swig/strlib/Makefile.in:  (New file).
	
2010-03-26       Gaius Mulley <gaius@gnu.org>

	* gm2/examples/c:  removed broken example.
	* cplusplus/m2catchcpp/Makefile.in:  new file.
	* cplusplus/m2catchcpp/Makefile:  removed file.
	* gm2/Make-lang.in:  added first completed version of
	  COROUTINES.mod.
	* gm2/TODO:  removed COROUTINES from the list.
	* gm2/config-lang.in:  tidied up the list of Makefiles
	  and added more examples to be built in the build
	  directories.
	* gm2/examples/cplusplus/m2catchcpp/Makefile.in:  (New file).
	* gm2/gm2-libs-iso/COROUTINES.mod:  completed first
	  implementation.

2010-03-25       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added new rule to test specific
	  dejagnu tests.
	* gm2/gccgm2.c:  gm2_tree_inlining_walk_subtrees
	  (New function).  gm2_gimplify_function_parameters
	  (New function).  gm2_gimplify_function_node
	  (New function) which correctly gimplifies
	  nested functions.
	* gm2/gm2-common.h:  gm2_tree_inlining_walk_subtrees
	  new prototype.
	* gm2/gm2-lang.c:  comment out gm2_tree_inlining_walk_subtrees.
	* gm2/m2pp.c:  corrected GetVoidType.
	* gm2/gm2-compiler/M2GenGCC.mod:  corrected
	  CheckConvertCoerceParameter so that set parameters are not
	  cast to constants.  Fixes a bug reported by
	  Scott Iverson.