@@ -1,11 +1,0 @@
-
-all: force
-	g++ -g -c cpp.cpp
-	gm2 -g -c m2.mod
-	gm2 -g m2.mod
-	./a.out
-
-clean: force
-	$(RM) *.o a.out
-
-force:
